<resources>
    <string name="app_name">TS E-Ticket</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--<string name="footer_text">Telangana Traffic Integrated e-Challan System</string>-->
    <string name="footer_text">TELANGANA TRAFFIC INTEGRATED E-CHALLAN SYSTEM</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="pid_user_name">PID / User name</string>
    <string name="app_version">1.0.0</string>
    <string name="welcome">Welcome</string>
    <string name="rc_header">TELANGANA STATE TRANSPORT DEPARTMENT\nCERTIFICATE OF REGISTRATION</string>
    <string name="spot_challan">Spot Challan</string>
    <string name="drunk_drive"><![CDATA[Drunk & Drive]]></string>
    <string name="towing_cp_act">41(CP) Act.</string>
    <string name="ghmc_shop">GHMC (Shop)</string>
    <string name="seizure_footpath">Seizure (Footpath)</string>
    <string name="court_disposal">Court Disposal</string>
    <string name="reports">Reports</string>
    <string name="release_documents">Release Documents</string>
    <string name="settings">Settings</string>
    <string name="officer_ps_name_cadre">TRAFFIC CELL, DEVELOPER (HYD)</string>
    <string name="telangana_traffic_police">TELANGANA TRAFFIC POLICE</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="driving_license_no">Driving License No.</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="re_enter_password">Confirm new password</string>
    <string name="new_user_sign_up">New user / Sign up ?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="emp_id">Officer employee id</string>
    <string name="mobile_no">Mobile no.</string>
</resources>
