<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_veh_no"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pid_user_name"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_new_password"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_conf_new_password"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_btns"
            android:layout_below="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_dialog_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@color/contact_number"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn_dialog_submit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:background="@color/contact_number"
                android:layout_weight="1"
                android:text="@string/submit"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>