<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#9f2626"
            android:textSize="@dimen/splash_welcome_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/header_image_left"
            android:layout_width="@dimen/splash_iv_width"
            android:layout_height="@dimen/splash_iv_height"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_ts_police" />

        <TextView
            android:id="@+id/tv_ttp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/telangana_traffic_police"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#374176"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/footer_text_style"
        android:id="@+id/footer"/>

</RelativeLayout>